== Mariculture 1.2.0c ==
* Fixed Autonomous Activator Being able to activate anvil/manpowered turbine

== Mariculture 1.2.0b ==
* Should have fixed the NEI Fuels for the the Crucible Furnace messing up every now and then
* Fixed right clicking entities crash
* Fixed right click + ctrl on enchants
* Obsidian takes 15 seconds to make in a Vat now
* Mariculture will now crash like other mods do with an ID Conflict, rather than the obscure crash it had before

== Mariculture 1.2.0a for Minecraft v1.6.X==
* Added Config option that allows you to force kelp/coral in other world types
* Limestone will no longer replace a block if a water material such as kelp/coral is above it (unless it is actually water).

== Mariculture 1.2.0 for Minecraft v1.6.X==
====New====
* Manual Turbines, right click them to provide RF
* Redstone Flux Fishing Rod
* Added Snorkel, cheap early game diving assistance, allows you to breathe slightly longer underwater
* Fish Sorter added
* Melting System, completely redone ;)
* Void Bottles are now placeable(work like a Void Tank)
* Fish Tank(read chest) Added
* Custom Block textures, are now 'side' based, so the side of the block you click gets the texture(e.g. select top of crafting table with paintbrush, and you'll paint all sides with that texture)
* New GUIs, with Notifications for missing items, and redstone/auto-eject controls
* New Speed, Capacitor, Salinator and Filter Upgrades
* Retro-Gen
* Jewelry is now repairable via the Blacksmith's Anvil, it requires XP per each hit, which will repair one damage point(can also repair all other repairable items this way), The materials used now also have more of an effect, they change enchantability, durability and the time needed to make
* NEI Integration for a lot of things
* Bunch of New Foods
* Guide Books (With Custom book support, so you can write your own guides(xml based out of game).
* Right clicking a squid with a fishing net will use up the net and drop a live raw squid