@@ -2,7 +2,7 @@
 {
   "modid" : "Mariculture",
   "name" : "Mariculture",
-  "version" : "1.2.0b",
+  "version" : "1.2.0c",
   "url" : "http://mariculture.wikispaces.com/",
   "credits" : "Cheers to volleycraft'ers for helping test out the mod, timebombtech for the logo, Poppycocks for the limestone brick/chiseled and pearl brick textures",
   "authors": [
